Fixes alignment of hours in day view

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -95,6 +95,7 @@ body {
 .week-day-full {
   flex-basis: 0;
   flex-grow: 1;
+  padding: 0;
   position: relative;
 }
 
